--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "react-google-maps": "^9.4.5",
     "react-range": "^1.8.14",
     "react-router-dom": "^6.4.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "use-places-autocomplete": "^4.0.0",
     "web-vitals": "^2.1.4"
   },
