--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.2",
     "bootstrap": "^5.2.2",
-    "react": "^17.0.2",
+    "react": "17.0.2",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-google-maps": "^9.4.5",
