--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bootstrap": "^5.2.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "^18.2.0",
+    "react-dom": "17.0.2",
     "react-google-maps": "^9.4.5",
     "react-range": "^1.8.14",
     "react-router-dom": "^6.4.1",
