--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "bootstrap": "^5.2.2",
     "react": "17.0.2",
     "react-bootstrap": "^2.5.0",
-    "react-dom": "17.0.2",
+    "react-dom": "^17.0.2",
     "react-range": "^1.8.14",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
